<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tencent.tilvbsdk.view.AVRootView
        android:id="@+id/av_root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/rl_control"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_call_title"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="gone"
            android:text="New Call"
            android:textSize="20pt"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_camera"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:text="@string/tip_close_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_switch_camera"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:text="@string/tip_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_mic"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:text="@string/tip_close_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_speaker"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:text="@string/tip_set_headset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_beauty"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:text="@string/tip_set_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_end"
                android:visibility="gone"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:text="@string/tip_end_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_beauty_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center" >

        <SeekBar
            android:id="@+id/sb_beauty_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <Button
            android:id="@+id/btn_beauty_setting_finish"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="@color/colorWhite"
            android:text="提交" />

    </LinearLayout>

</RelativeLayout>
